// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design management upload button component renders inverted upload design button 1`] = `
<gl-button-stub
  buttontextclasses=""
  category="primary"
  icon=""
  isinverted="true"
  size="small"
  title="Adding a design with the same filename replaces the file in a new version."
  variant="default"
>
  
  Upload designs
  
  <input
    accept="image/*"
    class="hide"
    multiple="multiple"
    name="design_file"
    type="file"
  />
</gl-button-stub>
`;

exports[`Design management upload button component renders upload design button 1`] = `
<gl-button-stub
  buttontextclasses=""
  category="primary"
  icon=""
  size="small"
  title="Adding a design with the same filename replaces the file in a new version."
  variant="default"
>
  
  Upload designs
  
  <input
    accept="image/*"
    class="hide"
    multiple="multiple"
    name="design_file"
    type="file"
  />
</gl-button-stub>
`;
